// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Status Indicator Fill values 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Negative Filling :
    </span>
    

    <div
      aria-label="Euro Status Indicator With Negative Filling"
      aria-roledescription="Status Indicator"
      aria-valuetext="35%"
      class="fd-status-indicator fd-status-indicator--negative fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="35% fill with negative color"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box5-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path21"
          id="__path21"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path21-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.35"
                stop-color="white"
              />
              
					
              <stop
                offset="0.35"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path21-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path21-gradient)"
                id="__path21-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path21-shape"
            mask="url(#__path21-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path21-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Critical Filling :
    </span>
    

    <div
      aria-label="Euro Status Indicator With Critical Filling"
      aria-roledescription="Status Indicator"
      aria-valuetext="60%"
      class="fd-status-indicator fd-status-indicator--critical fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="60% with critical color filling"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box6-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path22"
          id="__path22"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path22-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.6"
                stop-color="white"
              />
              
					
              <stop
                offset="0.6"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path22-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path22-gradient)"
                id="__path22-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path22-shape"
            mask="url(#__path22-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path22-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Positive Filling :
    </span>
    

    <div
      aria-label="Euro Status Indicator With Positive Filling"
      aria-roledescription="Status Indicator"
      aria-valuetext="100%"
      class="fd-status-indicator fd-status-indicator--positive fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="100% with Positive color filling"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box7-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path23"
          id="__path23"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path23-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path23-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path23-gradient)"
                id="__path12-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path23-shape"
            mask="url(#__path23-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path23-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Status Indicator Sizes 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Small size :
    </span>
    

    <div
      aria-label=" Euro Status Indicator small size"
      aria-roledescription="Status Indicator"
      aria-valuetext="35%"
      class="fd-status-indicator fd-status-indicator--negative fd-status-indicator--sm"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="35% with small size"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box1-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path1"
          id="__path1"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path1-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.35"
                stop-color="white"
              />
              
					
              <stop
                offset="0.35"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path1-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path1-gradient)"
                id="__path1-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path1-shape"
            mask="url(#__path1-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path1-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Medium size(Default) :
    </span>
    

    <div
      aria-label="Euro Status Indicator Medium default size"
      aria-roledescription="Status Indicator"
      aria-valuetext="50%"
      class="fd-status-indicator fd-status-indicator--critical fd-status-indicator--md"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="50% with default medium size"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box2-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path11"
          id="__path11"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path11-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.5"
                stop-color="white"
              />
              
					
              <stop
                offset="0.5"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path11-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path11-gradient)"
                id="__path11-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path11-shape"
            mask="url(#__path11-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path11-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Large Size :
    </span>
    

    <div
      aria-label="Euro Status Indicator large size"
      aria-roledescription="Status Indicator"
      aria-valuetext="80%"
      class="fd-status-indicator fd-status-indicator--positive fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="80% with large size"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box3-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path12"
          id="__path12"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path12-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.80"
                stop-color="white"
              />
              
					
              <stop
                offset="0.80"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path12-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path12-gradient)"
                id="__path12-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path12-shape"
            mask="url(#__path12-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path12-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Extra Large Size :
    </span>
    

    <div
      aria-label="Euro Status Indicator Extra Large size"
      aria-roledescription="Status Indicator"
      aria-valuetext="0%"
      class="fd-status-indicator fd-status-indicator--xl"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="0% with size extra large"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box4-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path13"
          id="__path13"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path13-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0"
                stop-color="white"
              />
              
					
              <stop
                offset="0"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path13-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path13-gradient)"
                id="__path13-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path13-shape"
            mask="url(#__path13-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path13-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Status Indicator Status Indicator With Angular filling 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Angular filling 270 degree:
    </span>
    

    <div
      aria-label="Euro Status Indicator Angled filling at 270 degree"
      aria-roledescription="Status Indicator"
      aria-valuetext="80%"
      class="fd-status-indicator fd-status-indicator--positive fd-status-indicator--xl"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="80% angled filling in 270 degree"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box36-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path6"
          id="__path36"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path36-gradient"
              x1="0"
              x2="1"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.8"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.8"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              
				
            </lineargradient>
            
				
            <mask
              id="__path36-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path36-gradient)"
                id="__path36-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path36-shape"
            mask="url(#__path36-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path36-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  


  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Angular filling 40 degree:
    </span>
    

    <div
      aria-label="Euro Status Indicator Angled filling at 40 degree"
      aria-roledescription="Status Indicator"
      aria-valuetext="50%"
      class="fd-status-indicator fd-status-indicator--critical fd-status-indicator--xl"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="50% angled filling in 40 degree"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box37-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path37"
          id="__path37"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path37-gradient"
              x1="1"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.5"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.5"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.5"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.5"
                />
                
					
              </stop>
              
				
            </lineargradient>
            
				
            <mask
              id="__path37-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path37-gradient)"
                id="__path37-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path37-shape"
            mask="url(#__path37-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path37-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  


  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Angular filling 98 degree:
    </span>
    

    <div
      aria-label="Euro Status Indicator Angled filling at 98 degree"
      aria-roledescription="Status Indicator"
      aria-valuetext="50%"
      class="fd-status-indicator fd-status-indicator--positive fd-status-indicator--xl"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="50% angled filling in 98 degree"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box38-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path38"
          id="__path38"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path38-gradient"
              x1="0"
              x2="1"
              y1="0"
              y2="1"
            >
              
					
              <stop
                offset="0.5"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.5"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.5"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.5"
                />
                
					
              </stop>
              
				
            </lineargradient>
            
				
            <mask
              id="__path38-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path38-gradient)"
                id="__path38-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path38-shape"
            mask="url(#__path38-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path38-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  


  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Angular filling 140 degree:
    </span>
    

    <div
      aria-label="Euro Status Indicator Angled filling at 140 degree"
      aria-roledescription="Status Indicator"
      aria-valuetext="40%"
      class="fd-status-indicator fd-status-indicator--negative fd-status-indicator--xl"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="40% angled filling in 140 degree"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box39-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path39"
          id="__path39"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path39-gradient"
              x1="1"
              x2="0"
              y1="0"
              y2="1"
            >
              
					
              <stop
                offset="0.4"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.4"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.4"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.4"
                />
                
					
              </stop>
              
				
            </lineargradient>
            
				
            <mask
              id="__path39-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path39-gradient)"
                id="__path39-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path39-shape"
            mask="url(#__path39-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path39-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Status Indicator Status Indicator With Coreographed filling 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="example-container"
  >
    

    <div
      aria-label="Status Indicator example for order dispatching"
      aria-roledescription="Status Indicator"
      aria-valuetext="70%"
      class="fd-status-indicator fd-status-indicator--positive coreographed fd-status-indicator--md"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="Fill object to form single filling pattern"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box32-24-cart"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path32"
          id="__path32"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path32-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path32-mask"
            >
              
					
              <path
                d="M22.9,17.2c-1.7,0-3.2,1.2-3.5,2.8h-4.8c-0.4-1.6-1.8-2.8-3.6-2.8c-0.1,0-0.2,0-0.3,0l-0.5-1.7h16L30.5,5H7L5.8,1l0,0l0,0
						l0-0.1L5.6,0.9l-5-0.4l0.2,1.7l3.4,0.3l4.7,15.4c-0.9,0.7-1.5,1.7-1.5,2.9c0,2,1.6,3.7,3.7,3.7c1.7,0,3.2-1.2,3.6-2.8h4.8
						c0.4,1.6,1.8,2.8,3.5,2.8c2,0,3.7-1.6,3.7-3.7C26.6,18.8,24.9,17.2,22.9,17.2z"
                fill="url(#__path32-gradient)"
                id="__path32-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M22.9,17.2c-1.7,0-3.2,1.2-3.5,2.8h-4.8c-0.4-1.6-1.8-2.8-3.6-2.8c-0.1,0-0.2,0-0.3,0l-0.5-1.7h16L30.5,5H7L5.8,1l0,0l0,0
				l0-0.1L5.6,0.9l-5-0.4l0.2,1.7l3.4,0.3l4.7,15.4c-0.9,0.7-1.5,1.7-1.5,2.9c0,2,1.6,3.7,3.7,3.7c1.7,0,3.2-1.2,3.6-2.8h4.8
				c0.4,1.6,1.8,2.8,3.5,2.8c2,0,3.7-1.6,3.7-3.7C26.6,18.8,24.9,17.2,22.9,17.2z"
            id="__path32-shape"
            mask="url(#__path32-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M22.9,17.2c-1.7,0-3.2,1.2-3.5,2.8h-4.8c-0.4-1.6-1.8-2.8-3.6-2.8c-0.1,0-0.2,0-0.3,0l-0.5-1.7h16L30.5,5H7L5.8,1l0,0l0,0
				l0-0.1L5.6,0.9l-5-0.4l0.2,1.7l3.4,0.3l4.7,15.4c-0.9,0.7-1.5,1.7-1.5,2.9c0,2,1.6,3.7,3.7,3.7c1.7,0,3.2-1.2,3.6-2.8h4.8
				c0.4,1.6,1.8,2.8,3.5,2.8c2,0,3.7-1.6,3.7-3.7C26.6,18.8,24.9,17.2,22.9,17.2z"
            fill="transparent"
            id="__path32-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      
	
      <svg
        class="fd-status-indicator__svg fd-status-indicator--negative"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box28-24-euro"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path28"
          id="__path28"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path28-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path28-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
					l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
					c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
					l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path28-gradient)"
                id="__path28-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
					l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
					c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
					l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path28-shape"
            mask="url(#__path28-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
					l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
					c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
					l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path28-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      
	
      <svg
        class="fd-status-indicator__svg fd-status-indicator--critical"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box29-24-factory"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path29"
          id="__path29"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path29-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path29-mask"
            >
              
					
              <path
                0"=""
                d="M19.6,12.9l0-3.7l-4.9,3.7V9.2l-5,3.9l-0.3,0l0-9.4H5.8v9.4H4.6V0.5H1l-0.3,24h23.6V9.3L19.6,12.9z M22.2,19.9H17v-2.4h5.2
					V19.9z stroke-width="
                fill="url(#__path29-gradient)"
                id="__path29-mask-shape"
                stroke="white"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            0"=""
            d="M19.6,12.9l0-3.7l-4.9,3.7V9.2l-5,3.9l-0.3,0l0-9.4H5.8v9.4H4.6V0.5H1l-0.3,24h23.6V9.3L19.6,12.9z M22.2,19.9H17v-2.4h5.2
			V19.9z stroke-width="
            id="__path29-shape"
            mask="url(#__path29-mask)"
            stroke="#89919A "
          >
            
			
          </path>
          
			
          <path
            0.25"=""
            d="M19.6,12.9l0-3.7l-4.9,3.7V9.2l-5,3.9l-0.3,0l0-9.4H5.8v9.4H4.6V0.5H1l-0.3,24h23.6V9.3L19.6,12.9z M22.2,19.9H17v-2.4h5.2
			V19.9z stroke-width="
            fill="transparent"
            id="__path29-shape-border"
            stroke="#89919A "
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box30-24-truck"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 45 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path30"
          id="__path30"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path30-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.5"
                stop-color="white"
              />
              
					
              <stop
                offset="0.5"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path30-mask"
            >
              
					
              <path
                d="M44.2,13.1l-2.6-6.5c-0.1-0.2-0.6-1.9-2.2-1.9h-6V2.3c0-1-0.8-1.8-1.8-1.8H2.7c-1.1,0-1.9,0.9-1.9,1.9v18.4h3.3h0.5l0,0
						c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h0.5h0.6l0,0c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h9.1h2.9l0,0
						c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h4.5V13.1z"
                fill="url(#__path30-gradient)"
                id="__path30-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M44.2,13.1l-2.6-6.5c-0.1-0.2-0.6-1.9-2.2-1.9h-6V2.3c0-1-0.8-1.8-1.8-1.8H2.7c-1.1,0-1.9,0.9-1.9,1.9v18.4h3.3h0.5l0,0
				c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h0.5h0.6l0,0c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h9.1h2.9l0,0
				c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h4.5V13.1z"
            id="__path30-shape"
            mask="url(#__path30-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M44.2,13.1l-2.6-6.5c-0.1-0.2-0.6-1.9-2.2-1.9h-6V2.3c0-1-0.8-1.8-1.8-1.8H2.7c-1.1,0-1.9,0.9-1.9,1.9v18.4h3.3h0.5l0,0
				c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h0.5h0.6l0,0c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h9.1h2.9l0,0
				c0,2,1.6,3.7,3.7,3.7c2,0,3.7-1.6,3.7-3.7l0,0h4.5V13.1z"
            fill="transparent"
            id="__path30-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box31-24-plane"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path31"
          id="__path31"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path31-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0"
                stop-color="white"
              />
              
					
              <stop
                offset="0"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path31-mask"
            >
              
					
              <path
                d="M8.8,24.5C8.8,24.5,8.8,24.5,8.8,24.5c-0.1,0-0.2-0.1-0.2-0.1l-2.9-4.9l-0.2-0.2l-4.8-2.9
						c-0.1,0-0.1-0.1-0.1-0.2c0-0.1,0-0.1,0.1-0.2c0-0.1,0.9-1.2,1-1.4c0,0,0,0,0,0c0.1-0.1,0.2-0.1,0.2-0.1l4.7,1.6l5.5-6.7L2.3,2.8
						C2.2,2.7,2.2,2.6,2.2,2.5l0.6-1.1C2.9,1.3,3,1.2,3.1,1.3l12.4,4.8l3.5-3.4c0.9-0.8,1.8-1.4,2.7-1.8c0.2-0.1,0.4-0.1,0.5-0.2
						c0,0,1.1-0.4,1.8,0.3c0.7,0.7,0.3,1.7,0.3,1.8c-0.1,0.2-0.1,0.4-0.2,0.5c-0.4,0.9-1,1.8-1.8,2.7l-3.4,3.5l4.8,12.4
						c0,0.1,0,0.2-0.1,0.3l-1.1,0.6c-0.1,0.1-0.2,0-0.3-0.1l-6.7-9.8l-6.7,5.5l1.6,4.7c0,0.1,0,0.2-0.1,0.2c0,0,0,0,0,0
						c-0.1,0.1-1.3,1-1.4,1C8.9,24.5,8.8,24.5,8.8,24.5z"
                fill="url(#__path31-gradient)"
                id="__path31-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M8.8,24.5C8.8,24.5,8.8,24.5,8.8,24.5c-0.1,0-0.2-0.1-0.2-0.1l-2.9-4.9l-0.2-0.2l-4.8-2.9
				c-0.1,0-0.1-0.1-0.1-0.2c0-0.1,0-0.1,0.1-0.2c0-0.1,0.9-1.2,1-1.4c0,0,0,0,0,0c0.1-0.1,0.2-0.1,0.2-0.1l4.7,1.6l5.5-6.7L2.3,2.8
				C2.2,2.7,2.2,2.6,2.2,2.5l0.6-1.1C2.9,1.3,3,1.2,3.1,1.3l12.4,4.8l3.5-3.4c0.9-0.8,1.8-1.4,2.7-1.8c0.2-0.1,0.4-0.1,0.5-0.2
				c0,0,1.1-0.4,1.8,0.3c0.7,0.7,0.3,1.7,0.3,1.8c-0.1,0.2-0.1,0.4-0.2,0.5c-0.4,0.9-1,1.8-1.8,2.7l-3.4,3.5l4.8,12.4
				c0,0.1,0,0.2-0.1,0.3l-1.1,0.6c-0.1,0.1-0.2,0-0.3-0.1l-6.7-9.8l-6.7,5.5l1.6,4.7c0,0.1,0,0.2-0.1,0.2c0,0,0,0,0,0
				c-0.1,0.1-1.3,1-1.4,1C8.9,24.5,8.8,24.5,8.8,24.5z"
            id="__path31-shape"
            mask="url(#__path31-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M8.8,24.5C8.8,24.5,8.8,24.5,8.8,24.5c-0.1,0-0.2-0.1-0.2-0.1l-2.9-4.9l-0.2-0.2l-4.8-2.9
				c-0.1,0-0.1-0.1-0.1-0.2c0-0.1,0-0.1,0.1-0.2c0-0.1,0.9-1.2,1-1.4c0,0,0,0,0,0c0.1-0.1,0.2-0.1,0.2-0.1l4.7,1.6l5.5-6.7L2.3,2.8
				C2.2,2.7,2.2,2.6,2.2,2.5l0.6-1.1C2.9,1.3,3,1.2,3.1,1.3l12.4,4.8l3.5-3.4c0.9-0.8,1.8-1.4,2.7-1.8c0.2-0.1,0.4-0.1,0.5-0.2
				c0,0,1.1-0.4,1.8,0.3c0.7,0.7,0.3,1.7,0.3,1.8c-0.1,0.2-0.1,0.4-0.2,0.5c-0.4,0.9-1,1.8-1.8,2.7l-3.4,3.5l4.8,12.4
				c0,0.1,0,0.2-0.1,0.3l-1.1,0.6c-0.1,0.1-0.2,0-0.3-0.1l-6.7-9.8l-6.7,5.5l1.6,4.7c0,0.1,0,0.2-0.1,0.2c0,0,0,0,0,0
				c-0.1,0.1-1.3,1-1.4,1C8.9,24.5,8.8,24.5,8.8,24.5z"
            fill="transparent"
            id="__path31-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Status Indicator Status Indicator With Label 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Top Label :
    </span>
    

    <div
      aria-label="Euro Status Indicator With Labelled On Top"
      aria-roledescription="Status Indicator"
      aria-valuetext="100%"
      class="fd-status-indicator fd-status-indicator--critical fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="100% with label on top"
    >
      
	
      <span
        class="fd-status-indicator__label fd-status-indicator__label--lg fd-status-indicator__label--top"
      >
        100%
      </span>
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box9-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path25"
          id="__path25"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path25-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path25-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path25-gradient)"
                id="__path25-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path25-shape"
            mask="url(#__path25-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path25-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Bottom Label :
    </span>
    

    <div
      aria-label="Euro Status Indicator With Labelled On Bottom"
      aria-roledescription="Status Indicator"
      aria-valuetext="100%"
      class="fd-status-indicator fd-status-indicator--positive fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="100% with label on bottom"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box10-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path26"
          id="__path26"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path26-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path26-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path26-gradient)"
                id="__path26-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path26-shape"
            mask="url(#__path26-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path26-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      
	
      <span
        class="fd-status-indicator__label fd-status-indicator__label--lg fd-status-indicator__label--bottom"
      >
        100%
      </span>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    

    <span
      class="fd-form-label"
    >
      Left Label :
    </span>
    

    <div
      aria-label="Euro Status Indicator With Labelled On Left"
      aria-roledescription="Status Indicator"
      aria-valuetext="100%"
      class="fd-status-indicator fd-status-indicator--critical fd-status-indicator--horizontal-label fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="100% with label on left"
    >
      
	
      <span
        class="fd-status-indicator__label fd-status-indicator__label--lg fd-status-indicator__label--left"
      >
        100%
      </span>
      
	
      <svg
        __shape0-__box21-24"=""
        class="fd-status-indicator__svg"
        height="100%"
        id="__shape0__box12-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 36 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path261"
          id="__path261"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path261-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path261-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path261-gradient)"
                id="__path261-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path261-shape"
            mask="url(#__path261-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path261-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Right Label :
    </span>
    

    <div
      aria-label="Euro Status Indicator With Labelled On Right"
      aria-roledescription="Status Indicator"
      aria-valuetext="100%"
      class="fd-status-indicator fd-status-indicator--positive fd-status-indicator--horizontal-label fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="100% with label on right"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box101-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 16 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path262"
          id="__path262"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path262-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="1"
                stop-color="white"
              />
              
					
              <stop
                offset="1"
                stop-color="transparent"
              />
              
				
            </lineargradient>
            
				
            <mask
              id="__path262-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path262-gradient)"
                id="__path262-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path262-shape"
            mask="url(#__path262-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path262-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      
	
      <span
        class="fd-status-indicator__label fd-status-indicator__label--lg fd-status-indicator__label--right"
      >
        100%
      </span>
      

    </div>
    

  </div>
  


</div>
`;

exports[`Storyshots Components/Status Indicator Status Indicator With Linear filling 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Left to Right fill :
    </span>
    

    <div
      aria-label="Euro status indicator animated left to right filling "
      aria-roledescription="Status Indicator"
      aria-valuetext="80%"
      class="fd-status-indicator fd-status-indicator--negative fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="80% fill from left to right"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box32-24"
        height="100%"
        id="__shape0__box32a-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path32a"
          id="__path32a"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path32a-gradient"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            >
              
					
              <stop
                offset="0.8"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.8"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              
				
            </lineargradient>
            
				
            <mask
              id="__path32a-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path32a-gradient)"
                id="__path27-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path32a-shape"
            mask="url(#__path32a-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path32a-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Bottom to Top fill
    </span>
    

    <div
      aria-label="Euro status indicator animated bottom up filling"
      aria-roledescription="Status Indicator"
      aria-valuetext="80%"
      class="fd-status-indicator fd-status-indicator--negative fd-status-indicator--lg"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="80% fill from bottom to top"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box33-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path33"
          id="__path33"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <lineargradient
              id="__path33-gradient"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            >
              
					
              <stop
                offset="0.8"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.8"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="3s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              
				
            </lineargradient>
            
				
            <mask
              id="__path33-mask"
            >
              
					
              <path
                d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
						l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
						c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
						l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
                fill="url(#__path33-gradient)"
                id="__path33-mask-shape"
                stroke="white"
                stroke-width="0"
              >
                
					
              </path>
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path33-shape"
            mask="url(#__path33-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path33-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Status Indicator Status Indicator With Radial filling 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Radial Clock filling:
    </span>
    

    <div
      aria-label="Euro Status Indicator Radial clockwise filling"
      aria-roledescription="Status Indicator"
      aria-valuetext="30%"
      class="fd-status-indicator fd-status-indicator--negative fd-status-indicator--xl"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="30% radial filling with clockwise"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box34-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path34"
          id="__path34"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <radialgradient
              cx="43"
              cy="28"
              fx="50%"
              fy="50%"
              id="__path34-gradient"
              r="30"
            >
              
					
              <stop
                offset="0.3"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="5s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.3"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="5s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              
				
            </radialgradient>
            
				
            <mask
              id="__path34-mask"
            >
              
					
              <circle
                cx="13"
                cy="13"
                fill="url(#__path34-gradient)"
                r="14"
                stroke="black"
                stroke-width="3"
                style="transform: rotate(275deg) translate(-24px);"
              />
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path34-shape"
            mask="url(#__path34-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path34-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  


  <div
    class="example-container"
  >
    
	
    <span
      class="fd-form-label"
    >
      Radial Counter Clock filling:
    </span>
    

    <div
      aria-label="Euro Status Indicator Radial clockwise filling"
      aria-roledescription="Status Indicator"
      aria-valuetext="30%"
      class="fd-status-indicator fd-status-indicator--negative fd-status-indicator--xl"
      focusable="true"
      role="progressbar"
      tabindex="0"
      title="30% radial filling with counterclockwise"
    >
      
	
      <svg
        class="fd-status-indicator__svg"
        data-sap-ui="__shape0-__box21-24"
        height="100%"
        id="__shape0__box35-24"
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="0 0 26 25"
        width="100%"
        x="0"
        xlmns="http://www.w3.org/2000/svg"
        y="0"
      >
        
		
        <svg
          data-sap-ui="__path35"
          id="__path35"
          overflow="visible"
          preserveAspectRatio="xMidYMid meet"
          xlmns="http://www.w3.org/2000/svg"
        >
          
			
          <defs>
            
				
            <radialgradient
              cx="30"
              cy="40"
              fx="50%"
              fy="50%"
              id="__path35-gradient"
              r="30"
            >
              
					
              <stop
                offset="0.3"
                stop-color="white"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="5s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              

					
              <stop
                offset="0.3"
                stop-color="transparent"
              >
                
					
                <animate
                  attributeName="offset"
                  begin="0s"
                  dur="5s"
                  repeatCount="1"
                  values="0;0.8"
                />
                
					
              </stop>
              
				
            </radialgradient>
            
				
            <mask
              id="__path35-mask"
            >
              
					
              <circle
                cx="13"
                cy="13"
                fill="url(#__path35-gradient)"
                r="14"
                stroke="black"
                stroke-width="3"
                style="transform: rotate(180deg) translate(-26px,-26px);"
              />
              
				
            </mask>
            
			
          </defs>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            id="__path35-shape"
            mask="url(#__path35-mask)"
            stroke="#89919A "
            stroke-width="0"
          >
            
			
          </path>
          
			
          <path
            d="M13,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.6,0.5,13,0.5z M16.4,10.1L15.9,12h-5.3v0.3H16
				l-0.5,1.9h-4.6c0.5,1.3,1.6,2,3.1,2c0.8,0,1.5-0.2,2.2-0.7l0.7-0.6v2.7l-0.1,0.1c-0.9,0.4-1.8,0.6-2.6,0.6c-1.6,0-2.9-0.3-3.8-1
				c-0.9-0.7-1.5-1.7-2-3H6.4l0.5-1.9h1V12H6.4l0.5-1.9h1.3C8.6,8.9,9.3,8,10.3,7.3c1-0.8,2.3-1.1,3.8-1.1c1.1,0,2,0.2,2.8,0.7L17.3,7
				l-0.6,2.3l-0.5-0.4c-0.4-0.2-0.9-0.4-1.4-0.5c-0.6-0.1-1.1-0.1-1.7,0c-0.6,0.1-1,0.3-1.5,0.7c-0.3,0.3-0.6,0.6-0.7,1H16.4z"
            fill="transparent"
            id="__path35-shape-border"
            stroke="#89919A "
            stroke-width="0.25"
          >
            
			
          </path>
          
		
        </svg>
        
	
      </svg>
      

    </div>
    

  </div>
  

</div>
`;
